--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -51,11 +51,19 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@color/grey"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/msg"
+        android:layout_margin="20dp"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:textColor="@color/mainColor"/>
     <Button
         android:background="@drawable/join_rectangle"
-        android:layout_margin="30dp"
+        android:layout_gravity="center"
         android:id="@+id/btnSubmit"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textStyle="bold"
