--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -10,13 +10,68 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="아직 걷기 메이트가 없습니다."
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="3dp"></TextView>
+        <View
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/grey"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="10dp"
+                android:paddingVertical="10dp"
+                android:layout_marginLeft="20dp"
+                android:text="@string/date"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:layout_gravity="left"/>
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="horizontal"
+                android:gravity="right">
+                <Button
+                    android:id="@+id/button_helper"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#00ff0000"
+                    android:paddingTop="5dp"
+                    android:drawableTop="@drawable/helper_btn"
+                    android:text="@string/helper" />
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/grey"/>
+        <Button
+            android:id="@+id/testPopUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="팝업테스트"></Button>
     <TextView
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="200dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="걷기메이트가 아직 없습니다.\n
 메이트를 신청해주세요 :) "
+        android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20dp"
