--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_gravity="bottom"
-            android:src="@drawable/main_img" />
+            android:src="@mipmap/main_img" />
     </LinearLayout>
 
     <LinearLayout
