--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,4 +54,15 @@
         android:textAppearance="@style/login_page"
         android:textColor="@color/white" />
 
+    <Button
+        android:id="@+id/btnRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="17dp"
+        android:background="@drawable/login_rectangle02"
+        android:text="@string/register"
+        android:textAppearance="@style/login_page"
+        android:textColor="@color/white" />
+
 </LinearLayout>
