--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,22 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
+
     <EditText
+        android:paddingLeft="20dp"
+        android:background="@drawable/login_rectangle01"
         android:id="@+id/et_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="188dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="아이디"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:paddingLeft="20dp"
+        android:background="@drawable/login_rectangle01"
         android:id="@+id/et_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,6 +42,8 @@
         app:layout_constraintTop_toBottomOf="@+id/et_id" />
 
     <EditText
+        android:paddingLeft="20dp"
+        android:background="@drawable/login_rectangle01"
         android:id="@+id/et_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,6 +59,8 @@
         app:layout_constraintTop_toBottomOf="@+id/et_pass" />
 
     <EditText
+        android:paddingLeft="20dp"
+        android:background="@drawable/login_rectangle01"
         android:id="@+id/et_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -66,6 +76,9 @@
         app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <Button
+        android:background="@drawable/join_rectangle"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
